--- a/АР.tab/Квартирография.panel/Помещения.pulldown/Добавить новое наименование.pushbutton/MainWindow.xaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/Добавить новое наименование.pushbutton/MainWindow.xaml
@@ -4,7 +4,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         WindowStartupLocation="CenterScreen"
-        Title="Добавить имя" Height="230" Width="400">
+        Title="Добавить имя"
+        Width="350"
+        Height="230"
+        MinHeight="230">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -26,9 +29,9 @@
         <TextBox
             Grid.Row="0"
             Grid.Column="1"
-            Margin="5"
+            Margin="5,10"
             TextWrapping="Wrap"
-            Text="{Binding room_name}"/>
+            Text="{Binding room_name, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Label
             Grid.Row="1"
@@ -37,57 +40,71 @@
         <TextBox
             Grid.Row="1"
             Grid.Column="1"
-            Margin="5"
+            Margin="5,10"
             TextWrapping="Wrap"
-            Text="{Binding coefficient}"/>
+            Text="{Binding coefficient, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Label
             Grid.Row="2"
             Margin="5"
-            Content="Открытое/Закрытое:"/>
+            VerticalAlignment="Center"
+            Content="Летнее:"/>
         <StackPanel
             Grid.Row="2"
             Grid.Column="1"
             Margin="5"
             VerticalAlignment="Center"
-            Orientation="Horizontal"
-            x:Name="ClosingSelector">
+            Orientation="Horizontal">
             <RadioButton
-                Width="90"
+                Width="100"
                 GroupName="OpenGroup"
-                Content="Открытое"
+                Content="Да"
                 IsChecked="{Binding is_summer}"/>
             <RadioButton
                 GroupName="OpenGroup"
-                Content="Закрытое"/>
+                Content="Нет"/>
         </StackPanel>
 
         <Label
             Grid.Row="3"
             Margin="5"
-            Content="Жилое/Нежилое:"/>
+            VerticalAlignment="Center"
+            Content="Жилое:"/>
         <StackPanel
             Grid.Row="3"
             Grid.Column="1"
             Margin="5"
             VerticalAlignment="Center"
-            Orientation="Horizontal"
-            x:Name="LivingSelector">
+            Orientation="Horizontal">
             <RadioButton
-                Width="90"
+                Width="100"
                 GroupName="LivingGroup"
-                Content="Жилое"
+                Content="Да"
                 IsChecked="{Binding is_open}"/>
             <RadioButton
                 GroupName="LivingGroup"
-                Content="Нежилое"/>
+                Content="Нет"/>
         </StackPanel>
 
-        <Button
-            Margin="5"
-            Grid.Row="4"
-            Grid.ColumnSpan="2"
-            Content="OK"
-            Command="{Binding add_new_name}"/>
+
+        <StackPanel Grid.Row="4"
+                    Margin="5"
+                    Grid.ColumnSpan="2"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right">
+            <TextBlock
+                Grid.Row="4"
+                Margin="10, 0"
+                Text="{Binding error_text, FallbackValue=ErrorText}"
+                Foreground="Orange"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right"/>
+            <Button
+                Grid.Row="4"
+                Grid.Column="1"
+                Width="100"
+                Content="OK"
+                Command="{Binding add_new_name}"/>
+        </StackPanel>
     </Grid>
 </Window>
