--- a/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор по линии.pushbutton/MainWindow.xaml
+++ b/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор по линии.pushbutton/MainWindow.xaml
@@ -29,7 +29,7 @@
             <TextBlock DockPanel.Dock="Top" Margin="0 0 0 10" Text="Линия" />
             <Button DockPanel.Dock="Right" Content="Выбрать" Width="80" Height="25"
                     Command="{Binding select_line_command}" />
-            <TextBox Text="{Binding element_name}" IsReadOnly="True" IsEnabled="False" />
+            <TextBox Text="{Binding selected_elem_name}" IsReadOnly="True" IsEnabled="False" />
         </DockPanel>
 
         <DockPanel Grid.Row="2" Margin="10" LastChildFill="True">
